# aslan-browser

./: .gitignore  LICENSE  README.md  ab.py  aslan-logo-1  gmail_login_test.py
aslan-browser/: AppDelegate.swift  BrowserTab.swift  ContentView.swift  Item.swift  JSONRPCHandler.swift  LearnRecorder.swift  MethodRouter.swift  ScriptBridge.swift  SocketServer.swift  TabManager.swift  aslan_browser.entitlements  aslan_browserApp.swift
aslan-browser-universal.app/Contents/: Info.plist
aslan-browser-universal.app/Contents/Frameworks/: libswiftCompatibilitySpan.dylib
aslan-browser-universal.app/Contents/Resources/: AppIcon.icns  README.md  (+10 more)
aslan-browser.xcodeproj/: project.pbxproj
aslan-browser/Models/: A11yNode.swift  BrowserError.swift  RPCMessage.swift  TabInfo.swift
aslan-browserTests/: aslan_browserTests.swift
aslan-browserUITests/: aslan_browserUITests.swift  aslan_browserUITestsLaunchTests.swift
assets/: aslan logo.af
benchmarks/: benchmark.py  complex_page.html
docs/: agents.md  index.html
docs/workflows/: README.md  conventions.md  notes.md  phase-10-learn-mode.md  phase-2-socket-server.md  phase-3-script-bridge.md  phase-4-accessibility-tree.md  phase-5-tab-management.md  phase-6-python-sdk.md  phase-8-loading-feedback.md  phase-9-cli.md
sdk/python/: CLI_REFERENCE.md  pyproject.toml
sdk/python/aslan_browser/: __init__.py  async_client.py  cli.py  client.py
sdk/python/tests/: test_cli.py  test_integration.py  test_learn.py
skills/aslan-browser/: SDK_REFERENCE.md  SKILL.md
tests/: manual_test_google_search.py  test_phase7.py  test_socket.py
(+38 files in other folders)
