[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aslan-browser"
version = "0.1.0"
description = "Python SDK for aslan-browser — a native macOS browser for AI agents"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["aslan_browser*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
